// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The quick auth screen renders the connection using the connection display name when preferConnectionDisplayName is true and there are no IdP domains configured 1`] = `
<DocumentFragment>
  <div
    class="auth0-lock-last-login-pane"
  >
    <a
      class="auth0-lock-social-button auth0-lock-social-big-button"
      data-provider="auth0"
      type="button"
    >
      <div
        class="auth0-lock-social-button-icon"
      />
      <div
        class="auth0-lock-social-button-text"
      >
        loginAtLabel,My Connection
      </div>
    </a>
    <div
      class="auth0-loading-container"
    >
      <div
        class="auth0-loading"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`The quick auth screen renders the connection using the connection domain when preferConnectionDisplayName is true, but no display name available 1`] = `
<DocumentFragment>
  <div
    class="auth0-lock-last-login-pane"
  >
    <a
      class="auth0-lock-social-button auth0-lock-social-big-button"
      data-provider="auth0"
      type="button"
    >
      <div
        class="auth0-lock-social-button-icon"
      />
      <div
        class="auth0-lock-social-button-text"
      >
        loginAtLabel,test.com
      </div>
    </a>
    <div
      class="auth0-loading-container"
    >
      <div
        class="auth0-loading"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`The quick auth screen renders the connection using the connection name when there is no domain available 1`] = `
<DocumentFragment>
  <div
    class="auth0-lock-last-login-pane"
  >
    <a
      class="auth0-lock-social-button auth0-lock-social-big-button"
      data-provider="auth0"
      type="button"
    >
      <div
        class="auth0-lock-social-button-icon"
      />
      <div
        class="auth0-lock-social-button-text"
      >
        loginAtLabel,Test
      </div>
    </a>
    <div
      class="auth0-loading-container"
    >
      <div
        class="auth0-loading"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`The quick auth screen renders the connection using the display name when preferConnectionDisplayName is true 1`] = `
<DocumentFragment>
  <div
    class="auth0-lock-last-login-pane"
  >
    <a
      class="auth0-lock-social-button auth0-lock-social-big-button"
      data-provider="auth0"
      type="button"
    >
      <div
        class="auth0-lock-social-button-icon"
      />
      <div
        class="auth0-lock-social-button-text"
      >
        loginAtLabel,My Connection
      </div>
    </a>
    <div
      class="auth0-loading-container"
    >
      <div
        class="auth0-loading"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`The quick auth screen renders the connection using the domain 1`] = `
<DocumentFragment>
  <div
    class="auth0-lock-last-login-pane"
  >
    <a
      class="auth0-lock-social-button auth0-lock-social-big-button"
      data-provider="auth0"
      type="button"
    >
      <div
        class="auth0-lock-social-button-icon"
      />
      <div
        class="auth0-lock-social-button-text"
      >
        loginAtLabel,test.com
      </div>
    </a>
    <div
      class="auth0-loading-container"
    >
      <div
        class="auth0-loading"
      />
    </div>
  </div>
</DocumentFragment>
`;
